[package]
name = "geno"
version = "2.5.1"
edition = "2021"
default-run = "geno"

[workspace]
members = [
    "bus",
    "configure",
    "protos",
    "network",
    "msp",
    "utils",
    "utils/merkletree",
    "leveldb-rs",
    "state",
    "vm",
    "executor",
    "types",
    "storage/storage-db",
    "storage/ledger-store",
    "storage/state-store",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
protos = { path = "./protos", version = "0.1.0" }
configure = { path = "./configure", version = "0.1.0" }
rusty-leveldb = { path = "./leveldb-rs", version = "0.3.6" }
network = { path = "./network", version = "0.1.0" }
msp = { path = "./msp", version = "0.1.0" }
utils = { path = "./utils", version = "0.1.0" }
state = { path = "./state", version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }

[build-dependencies]
build-data = "0.1.3"
