[package]
name = "geno"
version = "1.0.0"
edition = "2021"
default-run = "geno"

[workspace]
members = [
    "bus",
    "configure",
    "protos",
    "network",
    "msp",
    "utils",
    "utils/merkletree",
    "state",
    "vm",
    "executor",
    "types",
    "storage/storage-db",
    "storage/ledger-store",
    "storage/state-store",
    "jsonrpc",
    "catchup",
    "consensus/consensus-pbft",
    "consensus/ledger-upgrade",
    "geno-cmd",
    "tx-pool",
    "syscontract",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
protos = { path = "./protos", version = "0.1.0" }
configure = { path = "./configure", version = "0.1.0" }
network = { path = "./network", version = "0.1.0" }
msp = { path = "./msp", version = "0.1.0" }
utils = { path = "./utils", version = "0.1.0" }
state = { path = "./state", version = "0.1.0" }
catchup = { path = "./catchup", version = "0.1.0" }
executor = { path = "./executor", version = "0.1.0" }
geno-cmd = { path = "./geno-cmd", version = "0.1.0" }
jsonrpc = { path = "./jsonrpc", version = "0.1.0" }
tx-pool = { path = "./tx-pool", version = "0.1.0" }
consensus-pbft = { path = "./consensus/consensus-pbft", version = "0.1.0" }
syscontract = { path = "./syscontract", version = "0.1.0" }
futures = "0.3.12"

[build-dependencies]
build-data = "0.1.3"
protobuf-codegen-pure = "2"
