[package]
name = "configure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.104"
glob = "0.2"
lazy_static = "1.4.0"
file = "1.1.2"
toml = { version = "0.5", optional = true }
async-std = "1.9.0"
serde_millis = "0.1"
parking_lot = "0.11"
thiserror = "1.0.24"