[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
utils = { path = "../utils", version = "0.1.0" }
state = { path = "../state", version = "0.1.0" }
storage-db = { path = "../storage/storage-db", version = "0.1.0" }
ledger-store = { path = "../storage/ledger-store", version = "0.1.0" }
state-store = { path = "../storage/state-store", version = "0.1.0" }
vm = { path = "../vm", version = "0.1.0" }
types = { path = "../types", version = "0.1.0" }
tracing = { version = "0.1", default-features = false }
parking_lot = "0.11"
anyhow = "1.0.52"
protos = { path = "../protos", version = "0.1.0" }
configure = { path = "../configure", version = "0.1.0" }
protobuf = { version = "2.27.1", features = ["with-bytes"] }

tokio = { version = "1.17.0", features = [
    "io-util",
    "net",
    "parking_lot",
    "rt",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["codec"] }
hex-literal = "0.3"
hex = "0.4"
lazy_static = "1.4.0"
rayon = "1.4.1"
