[package]
name = "jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
configure = { path = "../configure", version = "0.1.0" }
utils = { path = "../utils", version = "0.1.0" }
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"], default-features = false }
warp = { version = "0.3.5", features = ["tls"] }
anyhow = "1.0.52"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.12"
