[package]
name = "msp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3"
secp256k1 = "0.7.1"
rust-crypto = "0.2.36"
ed25519-dalek = "=1.0.0"
curve25519-dalek = "3.0"
rand = "=0.7"
bs58 = "0.4.0"
log = "0.4.14"
libsm = { path = "../crypto/libsm", version = "0.4.0" }
num-bigint = "0.2.6"
lazy_static = "1.4.0"
parking_lot = "0.11"
sha256 = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
ron = "0.6.4"
keccak-hasher = "0.15.3"
hash-db = "0.15.2"
tiny-keccak = { version = "1.4" }
jni = "0.19.0"
anyhow = "1.0.38"
[lib]
name = "msp"
crate-type = ["rlib", "staticlib", "cdylib" ]