[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.27.1", features = ["with-bytes"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_bytes = "0.11.5"
