[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "0.15"
trie-db = "0.27.1"
memory-db = "0.32.0"
hash-db = "0.16.0"
keccak-hasher = "0.16.0"
reference-trie = "0.29.0"
log = "0.4.14"
fxhash = "0.2"
serde_json = "1.0.64"
linked-hash-map = "0.5.4"
hashbrown = "0.11.2"
parking_lot = "0.11"

protos = { path = "../protos", version = "0.1.0" }
protobuf = { version = "2.27.1", features = ["with-bytes"] }
storage-db = { path = "../storage/storage-db", version = "0.1.0" }
msp = { path = "../msp", version = "0.1.0" }
utils = { path = "../utils", version = "0.1.0" }
once_cell = "1.9.0"
lazy_static = "1.4.0"
lru-cache = "0.1"
anyhow = "1.0.52"
sha3 = "0.10.5"
