[package]
name = "syscontract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state", version = "0.1.0" }
utils = { path = "../utils", version = "0.1.0" }
msp = { path = "../msp", version = "0.1.0" }
types = { path = "../types", version = "0.1.0" }
protos = { path = "../protos", version = "0.1.0" }
lazy_static = "1.4.0"
anyhow = "1.0.52"
serde = { version = "1.0.124", features = ["derive"], default-features = false }
serde_json = "1.0.64"
parking_lot = "0.11"
once_cell = "1.9.0"
bincode = "1.0"
protobuf = { version = "2.25.1", features = ["with-bytes"] }
