[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos", version = "0.1.0" }
utils = { path = "../utils", version = "0.1.0" }
protobuf = { version = "2.27.1", features = ["with-bytes"] }
anyhow = "1.0.52"
hex-literal = "0.3"
hex = "0.4"
thiserror = "1.0.37"
