[package]
name = "state-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage-db = { path = "../storage-db", version = "0.1.0" }
state = { path = "../../state", version = "0.1.0" }
protos = { path = "../../protos", version = "0.1.0" }
utils = { path = "../../utils", version = "0.1.0" }
anyhow = "1.0.52"