[package]
name = "storage-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
configure = { path = "../../configure", version = "0.1.0" }
parking_lot = "0.11"
lazy_static = "1.4.0"
anyhow = "1.0.52"

[target.'cfg(windows)'.dependencies]
rusty-leveldb = "2.0.0"

[target.'cfg(unix)'.dependencies]
rocksdb = "0.21.0"
